<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nisabTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nisab_threshold"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="339dp"
        android:layout_height="82dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nisabTxt">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Value of Gold (7.5 tola)" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Value of Silver (52.5 tola)" />
    </RadioGroup>


    <Button
        android:id="@+id/btnHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:onClick="onBtnClicked"
        android:text="@string/btnHello"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nisabTxt"
        app:layout_constraintVertical_bias="0.901" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/perTolaPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:hint="Price per tola eg(5000)"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/btnHello"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Net Worth"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHello"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Zakat payable"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/btnHello"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/NetWorth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Rs:0"
        android:textColor="#38C53D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Zakat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Rs: 0"
        android:textColor="#38C53D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.708"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="406dp"
        android:layout_height="260dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnHello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465">

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cash"
                android:textColor="#000000"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container1"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/Cash1"
                app:expandedHintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cash1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:includeFontPadding="false"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cashContainer2"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/Cash2"
                app:expandedHintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cash2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cashContainer3"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/Cash3"
                app:expandedHintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cash3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cashContainer4"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/Cash4"
                app:expandedHintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cash4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Liabilities"
                android:textColor="#000000"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/libilityContainer1"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/Libility1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/libility1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/libilityContainer2"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/Libility2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/libility2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/libilityContainer3"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/Libility3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/libility3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="406dp"-->
<!--        android:layout_height="116dp"-->
<!--        android:orientation="vertical"-->
<!--        android:layout_marginLeft="20dp"-->
<!--        android:padding="25dp"-->

<!--        app:layout_constraintBottom_toTopOf="@+id/btnHello"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout">-->
<!--        <TextView-->
<!--            android:id="@+id/textView15"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Assets"-->
<!--            android:textColor="#000000"-->
<!--            android:textStyle="bold" />-->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/btnHello"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/linearLayout">-->

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/assetContainer1"-->
<!--                android:layout_width="172dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:hint="@string/asset1">-->

<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:id="@+id/goldAsset"-->
<!--                    android:layout_width="170dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:inputType="numberSigned" />-->
<!--            </com.google.android.material.textfield.TextInputLayout>-->

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/assetContainer2"-->
<!--                android:layout_width="181dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:hint="@string/asset2">-->

<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:id="@+id/silverAsset"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:inputType="numberSigned" />-->
<!--            </com.google.android.material.textfield.TextInputLayout>-->


<!--        </LinearLayout>-->


<!--    </LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>